@@ -1,3 +1,9 @@
+2008-11-04  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/structural.properties.R (shortest.paths) : 
+	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
+	'to' argument added
+
 2008-11-03  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/tkplot.R :
